# SuperFoxManCrate

./: CMakeLists.txt  box.cpp  box.hpp  bullet.hpp  collisionObject.cpp  collisionObject.hpp  enemy.cpp  enemy.hpp  level.cpp  level.hpp  main.cpp  physics.cpp  physics.hpp  platform.cpp  platform.hpp  player.cpp  player.hpp  run.sh  spawnPoint.cpp  spawnPoint.hpp  spawner.cpp  spawner.hpp  todoList.txt  utils.hpp  vector2.hpp  vector2.inl
bullets/: bullet.cpp  bullet.hpp  explosion.cpp  explosion.hpp
guns/: gun.cpp  gun.hpp  machineGun.cpp  machineGun.hpp  rocketLauncher.cpp  rocketLauncher.hpp
levels/: test.lvl
